# q2-setup-template

./: Makefile  Makefile.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja
conda-recipe/: meta.yaml  meta.yaml.jinja
