[project]
name = {{ PROJECT_NAME }}
authors = [
    { name = {{ PROJECT_AUTHOR_NAME }}, email = {{ PROJECT_AUTHOR_EMAIL }} }
]
description = {{ PROJECT_DESCRIPTION }}
readme = 'README.md'
license = {file = 'LICENSE'}
dynamic = ['version']

[project.urls]
Homepage = {{ PROJECT_URLS_HOMEPAGE }}
Documentation = {{ PROJECT_URLS_DOCUMENTATION }}
Repository = {{ PROJECT_URLS_REPOSITORY }}

[project.entry-points.'qiime2.plugins']
{{ PROJECT_NAME }} = '{{ PLUGIN_NAME }}.plugin_setup:plugin'

[build-system]
requires = [
    'setuptools',
    'versioningit',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[tool.versioningit.vcs]
method = 'git-archive'
describe-subst = "$Format:%(describe)$"
default-tag = '0.0.1'

[tool.versioningit.next-version]
method = 'minor'

[tool.versioningit.format]
distance = '{base_version}+{distance}.{vcs}{rev}'
dirty = '{base_version}+{distance}.{vcs}{rev}.dirty'
distance-dirty = '{base_version}+{distance}.{vcs}{rev}.dirty'

[tool.versioningit.write]
file = '{{ PROJECT_NAME }}/_version.py'

[tool.setuptools.package-data]
'*' = []
